First commited as before_59813_rev1